Version 0.1.1 -- 

* Add distutils-based setup.py script
* Support older poppler-qt4 versions by disabling methods not present

Version 0.1.0 -- October 14, 2010

* Initial release