@@ -1,32 +1,0 @@
-import os
-import sipconfig
-import PyQt4.pyqtconfig as pyqtconfig
-
-# The name of the SIP build file generated by SIP and used by the build system.
-build_file = "popplerqt4.sbf"
-
-# Get the PyQt configuration information.
-config = pyqtconfig.Configuration()
-
-# Get the extra SIP flags needed by the imported qt module.  Note that
-# this normally only includes those flags (-x and -t) that relate to SIP's
-# versioning system.
-qt_sip_flags = config.pyqt_sip_flags
-
-# Run SIP to generate the code.  Note that we tell SIP where to find the qt
-# module's specification files using the -I flag.
-os.system(" ".join([config.sip_bin, "-c", ".", "-b", build_file, "-I", config.pyqt_sip_dir, qt_sip_flags,
-    "poppler-qt4.sip"]))
-
-# Create the Makefile.  The QtGuiModuleMakefile class provided by the
-# pyqtconfig module takes care of all the extra preprocessor, compiler and
-# linker flags needed by the Qt library.
-makefile = pyqtconfig.QtGuiModuleMakefile(config, build_file)
-
-# Add the library we are wrapping.  The name doesn't include any platform
-# specific prefixes or extensions (e.g. the "lib" prefix on UNIX, or the
-# ".dll" extension on Windows).
-makefile.extra_libs = ["poppler-qt4"]
-makefile.extra_include_dirs = ["/usr/include/poppler/", "/usr/include/qt4/QtXml"]
-# Generate the Makefile itself.
-makefile.generate()
